.repair-init/repo/pkg/plugins/policies/meshpassthrough/plugin/v1alpha1/testdata/basic.listener.golden.yaml
resources:
- name: self_transparentproxy_passthrough_outbound_ipv4
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 15001
    filterChains:
    - filterChainMatch:
        destinationPort: 443
        serverNames:
        - api.example.com
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_api.example.com_443
          statPrefix: meshpassthrough_tls_api_example_com_443
      name: meshpassthrough_tls_api.example.com_443
    - filterChainMatch:
        destinationPort: 443
        serverNames:
        - example.com
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_example.com_443
          statPrefix: meshpassthrough_tls_example_com_443
      name: meshpassthrough_tls_example.com_443
    - filterChainMatch:
        destinationPort: 443
        serverNames:
        - '*.example.com'
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_*.example.com_443
          statPrefix: meshpassthrough_tls___example_com_443
      name: meshpassthrough_tls_*.example.com_443
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 9091
        prefixRanges:
        - addressPrefix: 10.42.0.8
          prefixLen: 32
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_9091
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_9091
          statPrefix: meshpassthrough_http_10_42_0_8_9091
      name: meshpassthrough_http_10.42.0.8_9091
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 8126
        prefixRanges:
        - addressPrefix: 10.42.0.8
          prefixLen: 32
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_8126
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_8126
          statPrefix: meshpassthrough_http_10_42_0_8_8126
      name: meshpassthrough_http_10.42.0.8_8126
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 8080
        prefixRanges:
        - addressPrefix: 10.42.0.8
          prefixLen: 32
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_8080
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_8080
          statPrefix: meshpassthrough_http_10_42_0_8_8080
      name: meshpassthrough_http_10.42.0.8_8080
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 443
        prefixRanges:
        - addressPrefix: 10.42.0.8
          prefixLen: 32
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_443
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_443
          statPrefix: meshpassthrough_http_10_42_0_8_443
      name: meshpassthrough_http_10.42.0.8_443
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 80
        prefixRanges:
        - addressPrefix: 10.42.0.8
          prefixLen: 32
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_80
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_80
          statPrefix: meshpassthrough_http_10_42_0_8_80
      name: meshpassthrough_http_10.42.0.8_80
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        prefixRanges:
        - addressPrefix: 10.42.0.8
          prefixLen: 32
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_*
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_*
          statPrefix: meshpassthrough_http_10_42_0_8__
      name: meshpassthrough_http_10.42.0.8_*
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 8126
        prefixRanges:
        - addressPrefix: 192.168.0.0
          prefixLen: 16
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_192.168.0.0/16_8126
            virtualHosts:
            - domains:
              - '*'
              name: 192.168.0.0/16
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_192.168.0.0/16_8126
          statPrefix: meshpassthrough_http_192_168_0_0_16_8126
      name: meshpassthrough_http_192.168.0.0/16_8126
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 8126
        prefixRanges:
        - addressPrefix: 240.0.0.0
          prefixLen: 4
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_240.0.0.0/4_8126
            virtualHosts:
            - domains:
              - '*'
              name: 240.0.0.0/4
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_240.0.0.0/4_8126
          statPrefix: meshpassthrough_http_240_0_0_0_4_8126
      name: meshpassthrough_http_240.0.0.0/4_8126
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 8080
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_8080
            virtualHosts:
            - domains:
              - example.com
              - example.com:8080
              name: example.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_example.com_8080
            - domains:
              - other.com
              - other.com:8080
              name: other.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_other.com_8080
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_8080
      name: meshpassthrough_http_8080
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 80
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_80
            virtualHosts:
            - domains:
              - www.google.com
              - www.google.com:80
              name: www.google.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_www.google.com_80
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_80
      name: meshpassthrough_http_80
    listenerFilters:
    - name: envoy.filters.listener.original_dst
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    name: self_transparentproxy_passthrough_outbound_ipv4
    trafficDirection: OUTBOUND
- name: self_transparentproxy_passthrough_outbound_ipv6
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: '::'
        portValue: 15001
    filterChains:
    - filterChainMatch:
        destinationPort: 9091
        prefixRanges:
        - addressPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
          prefixLen: 128
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_9091
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_9091
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_9091
    - filterChainMatch:
        destinationPort: 8126
        prefixRanges:
        - addressPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
          prefixLen: 128
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8126
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_8126
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8126
    - filterChainMatch:
        destinationPort: 8080
        prefixRanges:
        - addressPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
          prefixLen: 128
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8080
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_8080
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8080
    - filterChainMatch:
        destinationPort: 443
        prefixRanges:
        - addressPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
          prefixLen: 128
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_443
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_443
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_443
    - filterChainMatch:
        destinationPort: 80
        prefixRanges:
        - addressPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
          prefixLen: 128
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_80
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_80
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_80
    - filterChainMatch:
        prefixRanges:
        - addressPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
          prefixLen: 128
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_*
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6__
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_*
    - filterChainMatch:
        destinationPort: 443
        serverNames:
        - api.example.com
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_api.example.com_443
          statPrefix: meshpassthrough_tls_api_example_com_443
      name: meshpassthrough_tls_api.example.com_443
    - filterChainMatch:
        destinationPort: 443
        serverNames:
        - example.com
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_example.com_443
          statPrefix: meshpassthrough_tls_example_com_443
      name: meshpassthrough_tls_example.com_443
    - filterChainMatch:
        destinationPort: 443
        serverNames:
        - '*.example.com'
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_*.example.com_443
          statPrefix: meshpassthrough_tls___example_com_443
      name: meshpassthrough_tls_*.example.com_443
    - filterChainMatch:
        destinationPort: 9091
        prefixRanges:
        - addressPrefix: 9942:9abf:d0e0:f2da:2290:333b:e590:f497
          prefixLen: 128
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tcp_9942:9abf:d0e0:f2da:2290:333b:e590:f497_9091
          statPrefix: meshpassthrough_tcp_9942_9abf_d0e0_f2da_2290_333b_e590_f497_9091
      name: meshpassthrough_tcp_9942:9abf:d0e0:f2da:2290:333b:e590:f497_9091
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 8080
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_8080
            virtualHosts:
            - domains:
              - example.com
              - example.com:8080
              name: example.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_example.com_8080
            - domains:
              - other.com
              - other.com:8080
              name: other.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_other.com_8080
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_8080
      name: meshpassthrough_http_8080
    - filterChainMatch:
        applicationProtocols:
        - http/1.1
        - h2c
        destinationPort: 80
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_80
            virtualHosts:
            - domains:
              - www.google.com
              - www.google.com:80
              name: www.google.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_www.google.com_80
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_80
      name: meshpassthrough_http_80
    listenerFilters:
    - name: envoy.filters.listener.original_dst
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    name: self_transparentproxy_passthrough_outbound_ipv6
    trafficDirection: OUTBOUND
