.repair-init/repo/pkg/plugins/policies/meshpassthrough/plugin/v1alpha1/testdata/enabled_on_policy_and_mesh.listeners.golden.yaml
resources:
- name: self_transparentproxy_passthrough_outbound_ipv4
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 15001
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: self_transparentproxy_passthrough_outbound_ipv4
          statPrefix: outbound_passthrough_ipv4
    name: self_transparentproxy_passthrough_outbound_ipv4
    trafficDirection: OUTBOUND
