.repair-init/repo/pkg/plugins/policies/meshpassthrough/plugin/v1alpha1/testdata/mysql-protocol.clusters.golden.yaml
resources:
- name: meshpassthrough_tcp_172.12.2.2/24_3307
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    altStatName: meshpassthrough_tcp_172_12_2_2_24_3307
    connectTimeout: 5s
    lbPolicy: CLUSTER_PROVIDED
    name: meshpassthrough_tcp_172.12.2.2/24_3307
    type: ORIGINAL_DST
- name: meshpassthrough_tcp_172.12.2.2_3306
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    altStatName: meshpassthrough_tcp_172_12_2_2_3306
    connectTimeout: 5s
    lbPolicy: CLUSTER_PROVIDED
    name: meshpassthrough_tcp_172.12.2.2_3306
    type: ORIGINAL_DST
